# RE5TCg-

./: .gitignore  CMakeLists.txt  CODE_COMMENTS_SUMMARY.md  DNS_LRU_CACHE_说明书.md  DNS_服务器运行说明书.md  DNS分层架构分析报告.html  DNS缓存实现机制分析报告.html  ID映射分段锁优化完成总结.md  ID映射分段锁优化说明.md  LRU缓存机制说明.md  README_CROSSPLATFORM.md  README_DNS_PROXY.md  compile.bat  dnsServer copy.c.bak  log.txt  lru_cache_test.c  lru_test_compile.bat  my_dns_compile.bat  test_client.c  test_crossplatform.bat  test_crossplatform.sh  test_dns_proxy.ps1  test_multiple.c  upstream_dns.conf  《计算机网络课程设计》任务书2022.md  分段域名表优化完成总结.md  分段域名表优化说明.md  分段锁优化说明.md  命令行参数功能说明.md  跨平台模块程序设计说明.md
build_test/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
include/DNScache/: free_stack.h  relayBuild.h
include/Thread/: thread_pool.h
include/datagram/: datagram.h
include/debug/: debug.h
include/idmapping/: idmapping.h
include/platform/: platform.h  socket_wrapper.h
include/websocket/: datagram.h  dnsServer.h  upstream_config.h  websocket.h
src/: main.c
src/DNScache/: free_stack.c  relayBuild.c
src/Thread/: thread_pool.c
src/datagram/: datagram.c
src/debug/: debug.c
src/idmapping/: idmapping.c
src/platform/: platform.c  socket_wrapper.c
src/websocket/: datagram.c  dnsServer.c  upstream_config.c  websocket.c
